--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 An Html5 Chinese classic mahjong game built with Opa(http://www.opalang.org).
 
-You can visit: <url>http:/www.gammii.com<url> to see what it runs like.
+You can visit: <url>http://www.gammii.com<url> to see what it runs like.
 
